force-app/main/default/objects/TwilioSF__Log__c/fields/TwilioSF__ClassName__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ClassName__c</fullName>
    <description>Class Name attribute to this action</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>