force-app/main/default/objects/TwilioSF__Log__c/fields/TwilioSF__JSON__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__JSON__c</fullName>
    <description>JSON String (for debugging API calls)</description>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>