force-app/main/default/objects/TwilioSF__Log__c/fields/TwilioSF__Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Message__c</fullName>
    <description>Message for this action</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>