force-app/main/default/objects/TwilioSF__Log__c/fields/TwilioSF__ObjectIDs__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ObjectIDs__c</fullName>
    <description>Comma delimited list of Object ID&apos;s affected by this action</description>
    <label>Object IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>