force-app/main/default/objects/TwilioSF__Log__c/fields/TwilioSF__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ObjectName__c</fullName>
    <description>Object Name being saved in this action (for DML)</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>