force-app/main/default/objects/TwilioSF__Log__c/fields/TwilioSF__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__StackTrace__c</fullName>
    <description>Stack Trace (for exceptions)</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>