force-app/main/default/objects/TwilioSF__Log__c/listViews/TwilioSF__All.listView-meta.xml
<ListView>
    <fullName>TwilioSF__All</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__ClassName__c</columns>
    <columns>TwilioSF__Level__c</columns>
    <columns>TwilioSF__Message__c</columns>
    <columns>TwilioSF__User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>